gcc/testsuite/g++.dg/modules/atom-preamble-3.C
// { dg-additional-options -fmodules-atom }

#define import import
// { dg-error "must be within module preamble" "" { target *-*-* } .-1 }
import malcolm; 
